ticTacToe, tutorial with python and other tictactoe en js

--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="main">
             <div class="table">
-                <button class="box"></button>
+                <!-- <button class="box"></button>
                 <button class="box"></button>
                 <button class="box no-r"></button>
                 <button class="box"></button>
@@ -28,10 +28,13 @@
                 <button class="box no-r"></button>
                 <button class="box no-b"></button>
                 <button class="box no-b"></button>
-                <button class="box no-r no-b"></button>
+                <button class="box no-r no-b"></button> -->
             </div>
         </div>
         <div class="bottom"><button class="selected">Restart</button></div>
+        <div class="selectWinner">
+            <h2 id="winner"></h2>
+        </div>
     </div>
     
 </body>
