--- a/page-restaurant/src/index.html
+++ b/page-restaurant/src/index.html
@@ -11,38 +11,40 @@
   </head>
   <body>
     <div id="content">
-      <header class="header">
+      <!-- <header class="header">
         <div class="container">
           <div class="logo">
             <h2>Foot-on-a-Plate</h2>
           </div>
           <nav>
             <ul>
-              <li><a href="#" class="on">Home</a></li>
-              <li><a href="#" class="">Menu</a></li>
-              <li><a href="#" class="">Contant Us</a></li>
+              <li><a href="#" class="link on" id="at-home">Home</a></li>
+              <li><a href="#" class="link" id="at-menu">Menu</a></li>
+              <li><a href="#" class="link" id="at-contact">Contant Us</a></li>
             </ul>
           </nav>
         </div>
-      </header>
-      <main>
+      </header> -->
+      <!-- <main>
         <div id="home" class="active">
-          <div class="hero">
-            <h1>Come on down for some delicious cuisine!</h1>
-            <p>Tasty and affordable!</p>
-            <button class="btn btn-order">Order Now</button>
-          </div>
-          <div class="info">
-            <div class="card">
-              <span class="material-symbols-outlined"> location_on </span>
-              <p>1024 Pakwood Ave <br />San diego, CA 22434</p>
+          <div class="container">
+            <div class="hero">
+              <h1>Come on down for some delicious cuisine!</h1>
+              <p>Tasty and affordable!</p>
+              <button class="btn btn-order">Order Now</button>
             </div>
-            <div class="card">
-              <span class="material-symbols-outlined"> schedule </span>
-              <p>
-                <span>Mon-Thurs: </span>8am-8pm <br />
-                <span>Fri-Sun: </span>8am-11pm
-              </p>
+            <div class="info">
+              <div class="card">
+                <span class="material-symbols-outlined"> location_on </span>
+                <p>1024 Pakwood Ave <br />San diego, CA 22434</p>
+              </div>
+              <div class="card">
+                <span class="material-symbols-outlined"> schedule </span>
+                <p>
+                  <span>Mon-Thurs: </span>8am-8pm <br />
+                  <span>Fri-Sun: </span>8am-11pm
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -187,7 +189,81 @@
             </div>
           </div>
         </div>
-      </main>
+        <div id="contact">
+          <div class="container">
+            <div class="hero">
+              <h3>Contact us</h3>
+            </div>
+            <div class="contact-container">
+              <div class="contact-square">
+                <div class="contact-form">
+                  <div class="form-info">
+                    <div class="item">
+                      <p>
+                        <span class="material-symbols-outlined">
+                          location_on </span
+                        >1024 Oakwood Ave <br />
+                        San diego, CA 22434
+                      </p>
+                    </div>
+                    <div class="item">
+                      <p>
+                        <span class="material-symbols-outlined"> schedule </span
+                        >Mon-Thurs: 8am-8pm <br />
+                        Fri-Sun: 8am 11pm
+                      </p>
+                    </div>
+                    <div class="item">
+                      <p>
+                        <span class="material-symbols-outlined"> call </span
+                        >(222)-888 5555
+                      </p>
+                    </div>
+                  </div>
+                  <form action="#">
+                    <h4 class="form-title">
+                      <span class="material-symbols-outlined"> mail </span
+                      >Messege us
+                    </h4>
+                    <input
+                      type="text"
+                      name="name"
+                      id="name"
+                      placeholder="Full Name"
+                    />
+                    <input
+                      type="email"
+                      name="mail"
+                      id="mail"
+                      placeholder="Email"
+                    />
+
+                    <textarea
+                      name="message"
+                      id="message"
+                      cols="30"
+                      rows="2"
+                      placeholder="Type your message.."
+                    ></textarea>
+                    <div>
+                      <button>Send</button>
+                    </div>
+                  </form>
+                </div>
+                <div class="location-map">
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d969.8298650801368!2d-71.97896250564764!3d-13.515976266575954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sMcDonalds!5e0!3m2!1ses!2spe!4v1696365020346!5m2!1ses!2spe"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                  ></iframe>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main> -->
     </div>
   </body>
 </html>
