--- a/todo-List/src/index.html
+++ b/todo-List/src/index.html
@@ -29,19 +29,19 @@
             <nav>
               <ul>
                 <li>
-                  <a href="#" class="active">
-                    <span>Home</span>
+                  <a href="#" class="active" data-name="all">
+                    <span>All</span>
                     <div class="number-round"><span>28</span></div>
                   </a>
                 </li>
                 <li>
-                  <a href="#">
+                  <a href="#" data-name="today">
                     <span>Today</span>
                     <div class="number-round"><span>8</span></div>
                   </a>
                 </li>
                 <li>
-                  <a href="#">
+                  <a href="#" data-name="week">
                     <span>Week</span>
                     <div class="number-round"><span>800</span></div>
                   </a>
@@ -50,7 +50,7 @@
                   <a href="#" class="other-list">Projects</a>
                   <ul>
                     <li>
-                      <a href="#">
+                      <a href="#" data-name="gym">
                         <span>Gym</span>
                         <div class="number-round"><span>800</span></div>
                       </a>
@@ -78,13 +78,15 @@
               </ul>
             </nav>
             <div class="btn-circle">
-              <button type="button"><i class="fa-solid fa-plus"></i></button>
+              <button type="button" id="add-to-do">
+                <i class="fa-solid fa-plus"></i>
+              </button>
             </div>
           </aside>
           <div class="main-container">
             <div class="container">
               <div class="list-notes">
-                <div class="card">
+                <div class="card active" data-name="gym">
                   <div class="left">
                     <label class="cont">
                       <input type="checkbox" checked="" />
@@ -102,7 +104,7 @@
                     </span>
                   </div>
                 </div>
-                <div class="card">
+                <div class="card active" data-name="today">
                   <div class="left">
                     <label class="cont">
                       <input type="checkbox" checked="" />
@@ -120,7 +122,7 @@
                     </span>
                   </div>
                 </div>
-                <div class="card">
+                <div class="card active" data-name="today">
                   <div class="left">
                     <label class="cont">
                       <input type="checkbox" checked="" />
@@ -138,7 +140,7 @@
                     </span>
                   </div>
                 </div>
-                <div class="card">
+                <div class="card active" data-name="week">
                   <div class="left">
                     <label class="cont">
                       <input type="checkbox" checked="" />
@@ -156,7 +158,7 @@
                     </span>
                   </div>
                 </div>
-                <div class="card">
+                <div class="card active" data-name="today">
                   <div class="left">
                     <label class="cont">
                       <input type="checkbox" checked="" />
@@ -180,11 +182,11 @@
         </main>
       </div>
 
-      <div class="modal-new-nota">
+      <div class="modal-new-nota" id="modal-add">
         <div class="square-form">
           <div class="top-square-form">
             <h2>Create a new....</h2>
-            <div class="icon">
+            <div class="icon" id="close-modal">
               <i class="fa-solid fa-x"></i>
             </div>
           </div>
