falta los formularios

--- a/todo-List/src/index.html
+++ b/todo-List/src/index.html
@@ -31,19 +31,19 @@
                 <li>
                   <a href="#" class="active" data-name="all">
                     <span>All</span>
-                    <div class="number-round"><span>28</span></div>
+                    <div class="number-round"><span>0</span></div>
                   </a>
                 </li>
                 <li>
                   <a href="#" data-name="today">
                     <span>Today</span>
-                    <div class="number-round"><span>8</span></div>
+                    <div class="number-round"><span>0</span></div>
                   </a>
                 </li>
                 <li>
                   <a href="#" data-name="week">
                     <span>Week</span>
-                    <div class="number-round"><span>800</span></div>
+                    <div class="number-round"><span>0</span></div>
                   </a>
                 </li>
                 <li>
@@ -52,19 +52,19 @@
                     <li>
                       <a href="#" data-name="gym">
                         <span>Gym</span>
-                        <div class="number-round"><span>800</span></div>
+                        <div class="number-round"><span>0</span></div>
                       </a>
                     </li>
                     <li>
                       <a href="#">
                         <span>Gym</span>
-                        <div class="number-round"><span>800</span></div>
+                        <div class="number-round"><span>0</span></div>
                       </a>
                     </li>
                     <li>
                       <a href="#">
                         <span>Gym</span>
-                        <div class="number-round"><span>800</span></div>
+                        <div class="number-round"><span>0</span></div>
                       </a>
                     </li>
                   </ul>
@@ -72,7 +72,7 @@
                 <li>
                   <a href="#">
                     <span>Notes</span>
-                    <div class="number-round"><span>8</span></div>
+                    <div class="number-round"><span>0</span></div>
                   </a>
                 </li>
               </ul>
@@ -86,7 +86,7 @@
           <div class="main-container">
             <div class="container">
               <div class="list-notes">
-                <div class="card active" data-name="gym">
+                <!-- <div class="card active" data-name="gym">
                   <div class="left">
                     <label class="cont">
                       <input type="checkbox" checked="" />
@@ -175,7 +175,7 @@
                       <i class="fa-solid fa-trash-can"></i>
                     </span>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
