nose que pasa aqui, tengo que dejar comentarios

--- a/todo-List/src/index.html
+++ b/todo-List/src/index.html
@@ -260,6 +260,89 @@
                     </div>
                   </div>
                 </div>
+                <div class="project-form">
+                  <select id="project" class="btn-light" name="project">
+                    <option value="gym">gym</option>
+                    <option value="nose">nose</option>
+                    <option value="vw">VW</option>
+                    <option value="audi">Audi</option>
+                  </select>
+                </div>
+                <div class="submit-form">
+                  <button class="btn-light" type="submit">Add to do</button>
+                </div>
+              </div>
+            </div>
+          </form>
+          <form action="#" class="form-main" id="add-project">
+            <div id="to-do">
+              <div class="text-form">
+                <input
+                  type="text"
+                  placeholder="Title: Pay bills"
+                  name="title"
+                  id="title"
+                />
+                <textarea
+                  name="detail"
+                  id="detail"
+                  cols="30"
+                  rows="10"
+                  placeholder="Details: e,g internet, phone, rent."
+                ></textarea>
+              </div>
+              <div class="details-form">
+                <div class="dates-form">
+                  <div class="date-form">
+                    <label for="datetime">Dude Date:</label>
+                    <input
+                      type="date"
+                      name="datetime"
+                      id="datetime"
+                      class="btn-light"
+                    />
+                  </div>
+                  <div class="date-form">
+                    <label for="">Priority:</label>
+                    <div class="date-form-options">
+                      <label>
+                        <input
+                          type="radio"
+                          name="priority"
+                          id="lower"
+                          value="lower"
+                        />
+                        <span class="btn-light green">lower</span>
+                      </label>
+                      <label>
+                        <input
+                          type="radio"
+                          name="priority"
+                          id="medium"
+                          value="medium"
+                        />
+                        <span class="btn-light orange">medium</span>
+                      </label>
+                      <label>
+                        <input
+                          type="radio"
+                          name="priority"
+                          id="high"
+                          value="high"
+                        />
+                        <span class="btn-light red">high</span>
+                      </label>
+                    </div>
+                  </div>
+                </div>
+                <div class="project-form">
+                  <select id="project" class="btn-light" name="project">
+                    <option value="gym">gym</option>
+                    <option value="nose">nose</option>
+                    <option value="vw">VW</option>
+                    <option value="audi">Audi</option>
+                  </select>
+                </div>
                 <div class="submit-form">
                   <button class="btn-light" type="submit">Add to do</button>
                 </div>
