terminado, pero faltan funcionaliaddes, me aburri

--- a/todo-List/src/index.html
+++ b/todo-List/src/index.html
@@ -247,12 +247,11 @@
                   </div>
                 </div>
                 <div class="project-form">
-                  <select id="project" class="btn-light" name="project">
-                    <option value="gym">gym</option>
-                    <option value="nose">nose</option>
-                    <option value="vw">VW</option>
-                    <option value="audi">Audi</option>
-                  </select>
+                  <select
+                    id="project"
+                    class="btn-light"
+                    name="project"
+                  ></select>
                 </div>
                 <div class="submit-form">
                   <button class="btn-light" type="submit">Add to do</button>
