--- a/Book/index.html
+++ b/Book/index.html
@@ -1,40 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Library</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="container">
-            <h1>Library</h1>
-        </div>
+      <div class="container">
+        <h1>Library</h1>
+      </div>
     </header>
     <div class="container">
-        <main class="main">
-            <button class="btn btn-transparent" id="addBook">+ Add Book</button>
-            <div class="library">
-               
-            </div>
-        </main>
+      <main class="main">
+        <button class="btn btn-transparent" id="addBook">+ Add Book</button>
+        <div class="library"></div>
+      </main>
     </div>
     <div class="modal" id="modal">
-        <div class="close" id="close"></div>
-        <form id="miForm">
-            <h2>Add new Book</h2>
-            <input type="text" placeholder="Title">
-            <input type="text" placeholder="Author">
-            <input type="number" placeholder="Pages">
-            <div class="read">
-                <label for="read">Have you read it</label>
-                <input type="checkbox" name="read" id="read">
-            </div>
-          <button type="submit" class="btn green">Submit</button>
-        </form>
+      <div class="close" id="close"></div>
+      <form id="miForm">
+        <h2>Add new Book</h2>
+        <input type="text" placeholder="Title" required />
+        <input type="text" placeholder="Author" required />
+        <input type="number" placeholder="Pages" required />
+        <div class="read">
+          <label for="read">Have you read it</label>
+          <input type="checkbox" name="read" id="read" />
+        </div>
+        <button type="submit" class="btn green">Submit</button>
+      </form>
     </div>
-
-</body>
+  </body>
 </html>
