--- a/weatherapi/index.html
+++ b/weatherapi/index.html
@@ -3,15 +3,96 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <title>App Clima</title>
     <script src="script.js" defer></script>
   </head>
   <body>
-    <img src="#" />
-    <h1></h1>
-    <form action="#">
-      <input type="text" id="name" name="name" />
-      <button type="submit">Other img</button>
-    </form>
+    <div class="content">
+      <header class="header">
+        <nav>
+          <div class="logo">
+            <div class="icon"><i class="fas fa-rainbow"></i></div>
+            <h3>Weather</h3>
+          </div>
+          <form class="search" method="#">
+            <input type="text" />
+            <button type="submit"><i class="fas fa-search"></i></button>
+          </form>
+          <div class="temperature">
+            <button>°C, m/s</button>
+            <button>°F, mph</button>
+          </div>
+        </nav>
+      </header>
+      <main>
+        <div class="container">
+          <div class="card-clima">
+            <div class="top">
+              <h1 class="title">Amsterdam, NAasdasd</h1>
+              <p>fecha de hoy o nose</p>
+            </div>
+            <div class="description">
+              <div class="simple">
+                <div class="giant">
+                  <i class="fas fa-cloud"></i>
+                  <h2>19°C</h2>
+                </div>
+                <div class="normal">
+                  <h4>Overcast clouds</h4>
+                  <p>Feel like 19°C</p>
+                  <p>Gentle breeze</p>
+                </div>
+              </div>
+              <div class="boxs">
+                <div class="box">
+                  <p>wind</p>
+                  <h3><i class="fas fa-wind"></i> 5m/s</h3>
+                </div>
+                <div class="box">
+                  <p>wind</p>
+                  <h3><i class="fas fa-wind"></i> 5m/s</h3>
+                </div>
+                <div class="box">
+                  <p>wind</p>
+                  <h3><i class="fas fa-wind"></i> 5m/s</h3>
+                </div>
+                <div class="box">
+                  <p>wind</p>
+                  <h3><i class="fas fa-wind"></i> 5m/s</h3>
+                </div>
+                <div class="box">
+                  <p>wind</p>
+                  <h3><i class="fas fa-wind"></i> 5m/s</h3>
+                </div>
+                <div class="box">
+                  <p>wind</p>
+                  <h3><i class="fas fa-wind"></i> 5m/s</h3>
+                </div>
+                <div class="box">
+                  <p>wind</p>
+                  <h3><i class="fas fa-wind"></i> 5m/s</h3>
+                </div>
+                <div class="box">
+                  <p>wind</p>
+                  <h3><i class="fas fa-wind"></i> 5m/s</h3>
+                </div>
+                <div class="box">
+                  <p>maxing Crecent</p>
+                  <h3><i class="fas fa-star-and-crescent"></i></h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
+    </div>
   </body>
 </html>
